# ExpenceManager

./: CMakeLists.txt  accounts.xml  db.xml  main.cpp
inc/: accounts.hpp  main.hpp  user.hpp
src/: accounts.cpp  main.cpp  user.cpp  xmltest.cpp
